--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,10 +30,23 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          
-          - name: Build count
+      - name: Build count
+  
+      - name: Dynatrace Info Event
+        uses: wolfgangB33r/dynatrace-github-action@v5
+        with:
+          url: '${{ secrets.DT_URL }}'
+          token: '${{ secrets.DT_TOKEN }}'
+          events: |
+            - title: "GitHub Action Info Event"
+              type: CUSTOM_INFO
+              description: "Branch ${{ github.ref }} failed to build"
+              source: GitHub
+              tags:
+                - SERVICE:Test
+              dimensions:
+                project: "${{ github.repository }}"
+                branch: "${{ github.ref }}"
+                event: "${{ github.event_name }}"
+            owner: ${{ github.repository_owner }}
 
