--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,9 +29,7 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
-      # Runs a set of commands using the runners shell
-      - name: Build count
-  
+      # Call the Dynatrace git action
       - name: Dynatrace Info Event
         uses: wolfgangB33r/dynatrace-github-action@v5
         with:
