--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -25,11 +25,12 @@ jobs:
     - run: |
         kubectl create namespace ${{ env.NAMESPACE }} --dry-run=client -o json | kubectl apply -f -
     # Deploy app to AKS
-    - uses: azure/k8s-deploy@v1
+    - uses: azure/k8s-deploy@v1.4
       with:
-        manifests: |
-          ./manifests/deployment.yml
-          ./manifests/service.yml
-        images: |
-          ${{ env.REGISTRY_NAME }}/dt-orders-customer-service:1
         namespace: ${{ env.NAMESPACE }}
+        action: deploy
+        manifests: |
+          manifests/deployment.yml
+          manifests/service.yml
+        images: |
+          ${{ env.REGISTRY_NAME }}/dt-orders-customer-service:1.0.0
