--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -26,13 +26,44 @@ jobs:
     # Create namespace if doesn't exist
     - run: |
         kubectl create namespace ${{ env.NAMESPACE }} --dry-run=client -o json | kubectl apply -f -
-    # Deploy app to AKS
     - uses: azure/k8s-deploy@v1.4
       with:
         namespace: ${{ env.NAMESPACE }}
         action: deploy
         manifests: |
-          manifests/deployment.yml
+          manifests/frontend.yml
           manifests/service.yml
         images: |
+          ${{ env.REGISTRY_NAME }}/dt-orders-frontend:1.0.0
+    - uses: azure/k8s-deploy@v1.4
+      with:
+        namespace: ${{ env.NAMESPACE }}
+        action: deploy
+        manifests: |
+          manifests/customer-service.yml
+        images: |
           ${{ env.REGISTRY_NAME }}/dt-orders-customer-service:1.0.0
+    - uses: azure/k8s-deploy@v1.4
+      with:
+        namespace: ${{ env.NAMESPACE }}
+        action: deploy
+        manifests: |
+          manifests/catalog-service.yml
+        images: |
+          ${{ env.REGISTRY_NAME }}/dt-orders-catalog-service:1.0.0
+    - uses: azure/k8s-deploy@v1.4
+      with:
+        namespace: ${{ env.NAMESPACE }}
+        action: deploy
+        manifests: |
+          manifests/load-traffic
+        images: |
+          ${{ env.REGISTRY_NAME }}/dt-orders-load:1.0.0
+    - uses: azure/k8s-deploy@v1.4
+      with:
+        namespace: ${{ env.NAMESPACE }}
+        action: deploy
+        manifests: |
+          manifests/browser-traffic
+        images: |
+          ${{ env.REGISTRY_NAME }}/dt-orders-browser:1.0.0
