--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -63,7 +63,7 @@ jobs:
         namespace: ${{ env.NAMESPACE }}
         action: deploy
         manifests: |
-          manifests/load-traffic
+          manifests/load-traffic.yml
         images: |
           ${{ env.REGISTRY_NAME }}/dt-orders-load:1.0.0
     - uses: azure/k8s-deploy@v1.4
@@ -71,6 +71,6 @@ jobs:
         namespace: ${{ env.NAMESPACE }}
         action: deploy
         manifests: |
-          manifests/browser-traffic
+          manifests/browser-traffic.yml
         images: |
           ${{ env.REGISTRY_NAME }}/dt-orders-browser:1.0.0
