--- a/manifests/frontend.yml
+++ b/manifests/frontend.yml
@@ -3,8 +3,12 @@ kind: Deployment
 metadata:
   name: frontend
   labels:
-    app: dt-orders
-    service: frontend
+    app.kubernetes.io/name: frontend
+    app.kubernetes.io/version: "1.0.0"
+    app.kubernetes.io/component: frontend
+    app.kubernetes.io/part-of: dt-orders
+    app.kubernetes.io/managed-by: helm
+    app.kubernetes.io/created-by: dynatrace-demos
 spec:
   replicas: 1
   selector:
