--- a/manifests/browser-traffic.yml
+++ b/manifests/browser-traffic.yml
@@ -3,19 +3,23 @@ kind: Deployment
 metadata:
   name: browser-traffic
   labels:
-    app: dt-orders
-    service: browser-traffic
+    app.kubernetes.io/name: browser-traffic
+    app.kubernetes.io/version: 1
+    app.kubernetes.io/component: traffic-simulation
+    app.kubernetes.io/part-of: dt-orders
+    app.kubernetes.io/managed-by: helm
+    app.kubernetes.io/created-by: dynatrace-demos
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: dt-orders
-      service: browser-traffic
+      app.kubernetes.io/part-of: dt-orders
+      app.kubernetes.io/name: browser-traffic
   template:
     metadata:
       labels:
-        app: dt-orders
-        service: browser-traffic
+        app.kubernetes.io/part-of: dt-orders
+        app.kubernetes.io/name: browser-traffic
     spec:
       containers:
       - name: browser-traffic
