--- a/manifests/catalog-service.yml
+++ b/manifests/catalog-service.yml
@@ -18,8 +18,8 @@ spec:
   template:
     metadata:
       labels:
-        app: dt-orders
-        service: catalog
+        app.kubernetes.io/part-of: dt-orders
+        app.kubernetes.io/name: catalog-service
     spec:
       containers:
       - name: catalog
