--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -19,7 +19,8 @@ jobs:
           {
             "data": {
               "evaluation": {
-                "timeframe " : "5m"
+                "end": "2021-05-01T00:00:00.000Z",
+                "start": "2021-05-01T01:00:00.000Z"
               },
               "project": "dynatrace",
               "service": "journeyservice",
