--- a/.github/workflows/aks.yml
+++ b/.github/workflows/aks.yml
@@ -14,8 +14,8 @@ on:
         default: '1'
 env:
   REGISTRY_NAME: dtdemos
-  CLUSTER_NAME: jahn-aks-demo
-  CLUSTER_RESOURCE_GROUP: jahn-aks-demo
+  CLUSTER_NAME: jahn-aks-demo1
+  CLUSTER_RESOURCE_GROUP: jahn-aks-demo1
   NAMESPACE: dt-orders
   
 jobs:
@@ -59,7 +59,7 @@ jobs:
               project: "${{ github.repository }}"
               branch: "${{ github.ref }}"
               event: "${{ github.event_name }}"
-            owner: ${{ github.repository_owner }}
+              owner: ${{ github.repository_owner }}
     - name: "Deploy customer-service"
       uses: azure/k8s-deploy@v1.4
       with:
@@ -85,7 +85,7 @@ jobs:
               project: "${{ github.repository }}"
               branch: "${{ github.ref }}"
               event: "${{ github.event_name }}"
-            owner: ${{ github.repository_owner }}
+              owner: ${{ github.repository_owner }}
     - name: "Deploy catalog-service"
       uses: azure/k8s-deploy@v1.4
       with:
@@ -111,7 +111,7 @@ jobs:
               project: "${{ github.repository }}"
               branch: "${{ github.ref }}"
               event: "${{ github.event_name }}"
-            owner: ${{ github.repository_owner }}
+              owner: ${{ github.repository_owner }}
     - name: "Deploy order-service"
       uses: azure/k8s-deploy@v1.4
       with:
@@ -137,7 +137,7 @@ jobs:
               project: "${{ github.repository }}"
               branch: "${{ github.ref }}"
               event: "${{ github.event_name }}"
-            owner: ${{ github.repository_owner }}
+              owner: ${{ github.repository_owner }}
     - name: "Deploy load-traffic"
       uses: azure/k8s-deploy@v1.4
       with:
