--- a/.github/workflows/aks.yml
+++ b/.github/workflows/aks.yml
@@ -60,7 +60,7 @@ jobs:
               branch: "${{ github.ref }}"
               event: "${{ github.event_name }}"
               owner: ${{ github.repository_owner }}
-              github-job: "https://github.com/dt-demos/github-actions/actions/runs/${{ github.job }}"
+              github-job: "https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_number }}"
     - name: "Deploy customer-service"
       uses: azure/k8s-deploy@v1.4
       with:
@@ -87,7 +87,7 @@ jobs:
               branch: "${{ github.ref }}"
               event: "${{ github.event_name }}"
               owner: ${{ github.repository_owner }}
-              github-job: "https://github.com/dt-demos/github-actions/actions/runs/${{ github.job }}"
+              github-job: "https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_number }}"
     - name: "Deploy catalog-service"
       uses: azure/k8s-deploy@v1.4
       with:
@@ -114,7 +114,7 @@ jobs:
               branch: "${{ github.ref }}"
               event: "${{ github.event_name }}"
               owner: ${{ github.repository_owner }}
-              github-job: "https://github.com/dt-demos/github-actions/actions/runs/${{ github.job }}"
+              github-job: "https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_number }}"
     - name: "Deploy order-service"
       uses: azure/k8s-deploy@v1.4
       with:
@@ -141,7 +141,7 @@ jobs:
               branch: "${{ github.ref }}"
               event: "${{ github.event_name }}"
               owner: ${{ github.repository_owner }}
-              github-job: "https://github.com/dt-demos/github-actions/actions/runs/${{ github.job }}"
+              github-job: "https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_number }}"
     - name: "Deploy load-traffic"
       uses: azure/k8s-deploy@v1.4
       with:
