--- a/.github/workflows/monaco.yml
+++ b/.github/workflows/monaco.yml
@@ -1,27 +1,17 @@
 # This is a basic workflow to help you get started with Actions
 
 name: Monaco Test
-
-# Controls when the action will run. 
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container:
       image: dynatraceace/monaco-runner:release-v1.5.0
-      volumes:
-        - my_docker_volume:/volume_mount
-      #options: -v /__w/actions-test-repo/actions-test-repo:/zap/wrk/:rw
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+      env:
+        DT_BASEURL: ${{ secrets.DT_URL }}
+        DT_API_TOKEN: ${{ secrets.DT_TOKEN }}
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: Monaco version
         run: monaco --version 
@@ -29,4 +19,5 @@ jobs:
         run: ls -l
       - name: pwd
         run: pwd
-        
+      - name: Run Monaco
+        run:  monaco deploy -v --environments ./monaco/environments.yml --project dt-orders ./monaco/projects
