--- a/monaco/environments.yaml
+++ b/monaco/environments.yaml
@@ -1,4 +1,4 @@
 workshop:
-    - name: "workshop"
+    - name: "dt-orders"
     - env-url: "{{ .Env.DT_BASEURL }}"
     - env-token-name: "DT_API_TOKEN"
